# qminer

./: .cproject  .gitattributes  .gitignore  .gitmodules  .project  .travis.yml  CHANGELOG.md  CREDITS  LICENSE  Makefile  Makefile.config  README.md  README_NODE.md  appendIntellisense.js  appendlic.js  appveyor.yml  binding-linalg.gyp  binding-orig.gyp  binding.gyp  commitJSdoc.bat  configure  configure.ac  genJSdoc.sh  genNodeDoc.bat  genNodeDocInstructions.txt  genNodeDocTemp.bat  guilibs.bat  index.js  indexRelease.js  makedoc.js  mine.txt  node-gyp_linalg_instructions.txt  package-lock.json  package.json  qminer.sln  qminer.vcxproj  qminer.vcxproj.filters
.github/ISSUE_TEMPLATES/: bug-report.yaml  doc-request.yaml  feature-request.yaml
.github/workflows/: node-ci.yml  node.js.yml  publish.yml
TestJS/: test.js
autom4te.cache/: output.0  requests  traces.0
docjs/: ht.html  jsdocfinal.txt  linalg.html  movies.html  nnet.html  timeseries.html  twitter.html
docjs.todo/: ht.html  jsdocfinal.txt  kalman.html  timeseries.html  twitter.html
examples/: .gitignore
examples/graphextract/: cobiss.def  cobiss_author.txt  cobiss_pub_auth.txt  cobiss_publication.txt  init.bat
examples/graphextract.todo/: dellock.bat
examples/graphs/: graphs.js  gtest.txt  plot.html  plot_ce.html  plot_gs.html  test.bat
examples/hoeffdingtree/: fetch-datasets.sh  hoeffdingtree.def  init.sh  run.sh
examples/hoeffdingtree.todo/: fetch-datasets.sh  run.sh
examples/kalman/: init.sh  test.bat
examples/linalg/: linalg.js
examples/movies/: init.bat  init.sh  movies.def  movies.js  movies_small.def  package.json  server.sh
examples/nnet/: nnet.js
examples/spamfilter/: spam.js
examples/storage/: example.html  package.json  server.js
examples/streamaggr/: example.html  server.js
examples/streamaggregate/: package-lock.json  package.json  resampler.html  server.js  streamaggregate.html
examples/svc/: server.js  svc.html
examples/timeseries/: init.bat  init.sh  package.json  run.bat  timeSeries.def  timeseries.js
examples/timeseriesPlot/: plot.html  test.bat
examples/timeseriesPlot.todo/: init.bat  plot.html
examples/twitter/: init.bat  init.sh  twitter.def  twitter.js
examples/updatingTimeseriesPlot/: test.bat
nodedoc/: HierarchMarkov.html  NearestNeighborAD.html  PCA.html  RidgeReg.html  SVC.html  SVR.html  StreamAggr.html  StreamAggregate.html  StreamAgreggate.html  analytics.js  analytics.js.html  analyticsdoc.js  analyticsdoc.js.html  datasetsdoc.js  datasetsdoc.js.html  exports.HierarchMarkov.html  fsdoc.js  fsdoc.js.html  global.html  htdoc.js  htdoc.js.html  index.html  instructions.txt  ladoc.js  ladoc.js.html  ladoc_module.js  ladoc_structures.js  module-analytics-ActiveLearner.html  module-analytics-metrics.ClassificationScore.html  module-analytics-metrics.MeanAbsoluteError.html  module-analytics-metrics.MeanAbsolutePercentageError.html  module-analytics-metrics.MeanError.html  module-analytics-metrics.MeanSquareError.html  module-analytics-metrics.PredictionCurve.html  module-analytics-metrics.R2Score.html  module-analytics-metrics.RootMeanSquareError.html  module-analytics-metrics.html  module-analytics-preprocessing.Binarizer.html  module-analytics-preprocessing.html  module-analytics.BiasedGk.html  (+77 more)
nodedoc/htdoc/: htdoc.js.html  index.html  module-ht.IntFltMap.html  module-ht.IntIntMap.html  module-ht.IntStrMap.html  module-ht.html  (+3 more)
src/: .gitignore  expand_tabs.sh
tools/: Doxyfile  changeDocHeader.js  commitJSdoc.bat  configure  createExampleTests.js  factorydoc.js  genCppDoc.sh  genExampleTests.bat  genExampleTests.sh  genNodeDoc.bat  genNodeDoc.sh  genNodeDocInstructions.txt  guilibs.bat  install_node.sh  mac_genExampleTests.sh  makedoc.js  publish32.sh  publish_arm.sh  readme.md  removeTimestamp.js
(+743 files in other folders)
